compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 549
expression: "case [3.33], 1 { x, y if x > y -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case [3.33], 1 { x, y if x > y -> 1 }
  │                          ^

Expected type:

    Int

Found type:

    List(Float)


